--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/abijaK/expressCrudApp/issues"
   },
-  "homepage": "https://github.com/abijaK/expressCrudApp#readme"
+  "homepage": "https://github.com/abijaK/expressCrudApp#readme",
+  "dependencies": {
+    "bootstrap": "^5.2.2",
+    "react-bootstrap": "^2.5.0"
+  }
 }
