--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/abijaK/expressCrudApp/issues"
   },
-  "homepage": "https://github.com/abijaK/expressCrudApp#readme"
+  "homepage": "https://github.com/abijaK/expressCrudApp#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "pg": "^8.8.0"
+  }
 }
