--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/abijaK/expressCrudApp/issues"
   },
-  "homepage": "https://github.com/abijaK/expressCrudApp#readme"
+  "homepage": "https://github.com/abijaK/expressCrudApp#readme",
+  "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.2"
+  }
 }
