--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "bootstrap": "^5.2.2",
     "react-bootstrap": "^2.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
